@@ -395,6 +395,8 @@ Skills:
         # When using Unarmed, picked up items will automatically get moved to a free slot instead of going in the slot
         # of your hand. Should item pickup be disabled when your entire inventory - except for your hand - is full?
         Item_Pickup_Disabled_Full_Inventory: true
+        # Any attacks made without a tool, i.e. with one's open hand, a block, etc., will count as unarmed. 
+        Items_As_Unarmed: false
     Woodcutting:
         Tree_Feller_Sounds: true
         Level_Cap: 0
